apps/kuby-test/dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-staging
spec:
  routes:
  - match: Host(`dashboard.hephy.pro`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
      - name: auth
  entryPoints:
    - websecure
  tls:
    certResolver: myresolver
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: traefik-staging
spec:
  basicAuth:
    secret: traefik-dashboard-auth-htpasswd
